--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   fluentui_system_icons: 
   flutter:
     sdk: flutter
+  palette_generator: ^0.3.3
   flutter_flip_card: 
   flutter_localizations:
     sdk: flutter
