--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   audio_service: 
   audio_session: 
   cached_network_image: ^3.3.1
+  carousel_slider: ^5.1.1
   dynamic_color: 
   file_picker: 
   fluentui_system_icons: 
