--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   youtube_player_flutter: 
   shimmer: ^3.0.0
   lottie: ^3.1.0
+  flutter_cache_manager: ^3.3.1
  
 
 dev_dependencies:
