ipad and android is done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true"
         android:extractNativeLibs="true"
+        android:usesCleartextTraffic="true"
         >
         <!-- AudioServiceActivity -->
         <activity
