--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   lottie: ^3.1.0
   flutter_cache_manager: ^3.3.1
   audio_video_progress_bar: ^2.0.1 # Added for song progress bar
+  window_manager: ^0.3.8
  
 
 dev_dependencies:
@@ -78,6 +79,10 @@ flutter:
 flutter_icons:
   android: true
   ios: true
+  macos:
+    generate: true
+  windows:
+    generate: true
   image_path: "assets/images/JTunes.png"
   adaptive_icon_foreground: "assets/images/JTunes.png"
   adaptive_icon_background: "#FFFFFF"  # Default white
