--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,11 @@ dependencies:
   shimmer: ^3.0.0
   lottie: ^3.1.0
   flutter_cache_manager: ^3.3.1
-  audio_video_progress_bar: ^2.0.1 # Added for song progress bar
+  audio_video_progress_bar: ^2.0.1 
   window_manager: ^0.3.8
+  firebase_core: ^2.10.0
+  firebase_analytics: ^10.4.0
+  firebase_auth: 
  
 
 dev_dependencies:
