feat: Implement user authentication with sign up and login functionality
- Added UserModel to represent user data with Firestore integration.
- Created LoginPage for user login with email/password and Google sign-in options.
- Developed SignUpPage for user registration, including form validation and date of birth selection.
- Implemented AuthService for handling authentication logic, including sign up, sign in, and Google sign-in.
- Integrated SharedPreferences to remember user email for login.
- Added error handling and user feedback through toast messages.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
             
         }
         debug {
-            applicationIdSuffix '.debug'
+            // applicationIdSuffix '.debug'
             versionNameSuffix ' DEBUG'
         }
     }
