--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: j3tunes
 description: Music Streaming app made in Flutter!
 
 publish_to: 'none'
-version: 1.0.1+2 
+version: 1.0.1+4 
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -59,6 +59,7 @@ dependencies:
   google_sign_in: ^6.2.1
   font_awesome_flutter: 
   package_info_plus: 
+  open_file_plus: ^3.4.1+1 # Added for APK installation
   share_plus:
   device_apps_plus: 
   
