--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: j3tunes
 description: Music Streaming app made in Flutter!
 
 publish_to: 'none'
-version: 1.0.1+4 
+version: 1.0.3
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -60,6 +60,7 @@ dependencies:
   font_awesome_flutter: 
   package_info_plus: 
   open_file_plus: ^3.4.1+1 # Added for APK installation
+  permission_handler: ^11.3.1 # Added for storage permission
   share_plus:
   device_apps_plus: 
   
