--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,16 @@
         android:extractNativeLibs="true"
         android:usesCleartextTraffic="true"
         >
+
+        <!-- Fix for manifest merger issue with google_mobile_ads and firebase_analytics -->
+        <property
+            android:name="android.adservices.AD_SERVICES_CONFIG"
+            tools:node="remove" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6428573761016390~4898409044"/>
+            
         <!-- AudioServiceActivity -->
         <activity
             android:name="com.ryanheise.audioservice.AudioServiceActivity"
@@ -51,7 +61,6 @@
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
-
 
             <meta-data android:name="flutter_deeplinking_enabled" android:value="false" />
 
