--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   permission_handler: ^11.3.1 # Added for storage permission
   share_plus:
   device_apps_plus: 
+  google_mobile_ads: ^5.1.0 # Latest version check karein
+
   
   
  
