--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: j3tunes
 description: Music Streaming app made in Flutter!
 
 publish_to: 'none'
-version: 1.0.3
+version: 1.0.5
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -11,11 +11,11 @@ environment:
 dependencies:
   app_links: 
   audio_service: ^0.18.12
-  audio_session: 
-  cached_network_image: ^3.3.1
+  audio_session: ^0.2.2
+  cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
   dynamic_color: 
-  file_picker: 
+  file_picker: ^10.3.3
   fluentui_system_icons: 
   flutter:
     sdk: flutter
@@ -25,15 +25,15 @@ dependencies:
   flutter_flip_card: 
   flutter_localizations:
     sdk: flutter
-  go_router: 
+  go_router: ^16.2.4
   hive: 
   hive_flutter: 
   html:
   http:
   intl:
-  just_audio: ^0.9.36
+  just_audio: ^0.10.5
   just_audio_background: ^0.0.1-beta.17
-  rxdart: 
+  rxdart: ^0.28.0
   url_launcher: 
   youtube_explode_dart:
     git:
@@ -44,24 +44,24 @@ dependencies:
   dio: 
   get: 
   jiosaavn:  
-  home_widget: ^0.6.0
+  home_widget: ^0.8.0
   workmanager: ^0.9.0+3
-  youtube_player_flutter: 
+  youtube_player_flutter: ^9.1.2
   shimmer: 
   lottie: 
   flutter_cache_manager:
   audio_video_progress_bar: 
-  window_manager: 
-  firebase_core: ^2.32.0
-  firebase_analytics: ^10.10.7
-  firebase_auth: ^4.20.0
-  cloud_firestore: ^4.17.4
-  google_sign_in: ^6.2.1
+  window_manager: ^0.5.1
+  firebase_core: ^4.1.1
+  firebase_analytics: ^12.0.2
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
+  google_sign_in: ^7.2.0
   font_awesome_flutter: 
-  package_info_plus: 
-  open_file_plus: ^3.4.1+1 # Added for APK installation
-  permission_handler: ^11.3.1 # Added for storage permission
-  share_plus:
+  package_info_plus: ^9.0.0
+  open_file: ^3.5.10 # Replaced open_file_plus
+  permission_handler: ^12.0.1 # Added for storage permission
+  share_plus: ^12.0.0
   device_apps_plus: 
   
   
@@ -71,7 +71,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   translations_cleaner: 
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
 
 dependency_overrides:
   collection: ^1.19.0
